--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@ li:hover .send-btn{opacity:1}
 .video-wrapper{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.15);margin-top:10px}
 .video-wrapper iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0}
 .video-caption{color:var(--muted);font-size:14px;margin-top:8px}
+
+/* Suggest Modal */
+#suggestModal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.4);justify-content:center;align-items:center}
+.modal-content{background:var(--card);padding:20px;border-radius:12px;width:90%;max-width:420px;box-shadow:var(--shadow)}
+.modal-content h3{margin-top:0;font-weight:700}
+.modal-content label{display:block;margin-top:10px;font-weight:600;color:var(--text)}
+.modal-content input,.modal-content textarea{width:100%;margin-top:6px;padding:8px;border-radius:8px;border:1px solid var(--border);background:var(--bg);color:var(--text)}
+.modal-actions{margin-top:14px;text-align:right}
+.modal-actions button{margin-left:8px}
 </style>
 </head>
 <body>
@@ -149,22 +158,27 @@ li:hover .send-btn{opacity:1}
 <p class="video-caption">▶ Watch directly in Teams — interactive demo video.</p>
 </div>
 </details>
+</div>
+</div>
+</div>
 
-<!-- === F === -->
-<details>
-<summary>F. Other Prompts</summary>
-<div class="details-body">
-<p>To capture partner dynamics:</p>
-<ul>
-<li><span class="prompt-text" data-copy>Highlight advantages of [ ] region.</span>
-<button class="send-btn" data-send="Highlight advantages of [ ] region.">Send to Chat</button></li>
-</ul>
+<!-- Modal -->
+<div id="suggestModal">
+  <div class="modal-content">
+    <h3>💡 Suggest a New Prompt</h3>
+    <label>Agent:</label>
+    <input type="text" id="suggestAgent" readonly>
+    <label>Prompt:</label>
+    <textarea id="suggestPrompt" rows="2" placeholder="Describe the prompt idea..."></textarea>
+    <label>Justification:</label>
+    <textarea id="suggestJustification" rows="3" placeholder="Explain why it should be added..."></textarea>
+    <div class="modal-actions">
+      <button id="cancelSuggest">Cancel</button>
+      <button id="submitSuggest" class="primary">Submit</button>
+    </div>
+  </div>
 </div>
-</details>
 
-</div>
-</div>
-</div>
 <div class="footer">Hover any prompt and click to copy or send — use 💡 buttons to suggest new ones.</div>
 
 <script>
@@ -190,15 +204,27 @@ btn.style.background="rgba(37,99,235,.1)";
 setTimeout(()=>{btn.textContent="Send to Chat";btn.style.background="transparent";},2000);}
 catch(err){alert("Could not open chat. Prompt copied instead.");}});
 
-// Suggest New Prompt Button (Section wide)
+// Suggest Form Logic
+const modal=document.getElementById('suggestModal');
+const agentField=document.getElementById('suggestAgent');
+const promptField=document.getElementById('suggestPrompt');
+const justificationField=document.getElementById('suggestJustification');
+const cancelBtn=document.getElementById('cancelSuggest');
+const submitBtn=document.getElementById('submitSuggest');
+
 document.addEventListener('click',e=>{
 const btn=e.target;if(!(btn&&btn.matches('.suggest-main[data-agent]')))return;
-const agent=btn.getAttribute('data-agent');
-const message=`I would like to suggest adding the following Prompt: "[Prompt here]" to Agent ${agent}`;
-const chatUrl=`https://teams.microsoft.com/l/chat/0/0?users=josevazquez@microsoft.com&message=${encodeURIComponent(message)}`;
-window.open(chatUrl,'_blank');
+agentField.value=btn.getAttribute('data-agent');
+promptField.value='';justificationField.value='';
+modal.style.display='flex';
 });
-})();
-</script>
-</body>
-</html>
+
+cancelBtn.addEventListener('click',()=>{modal.style.display='none';});
+
+submitBtn.addEventListener('click',()=>{
+const agent=agentField.value.trim();
+const prompt=promptField.value.trim();
+const justification=justificationField.value.trim();
+if(!prompt){alert("Please enter the prompt idea.");return;}
+const message=`I would like to suggest adding the following Prompt: "${prompt}"
+
