--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ li:hover .send-btn{opacity:1}
 .video-wrapper{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.15);margin-top:10px}
 .video-wrapper iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0}
 .video-caption{color:var(--muted);font-size:14px;margin-top:8px}
-
 /* Suggest Modal */
 #suggestModal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.4);justify-content:center;align-items:center}
 .modal-content{background:var(--card);padding:20px;border-radius:12px;width:90%;max-width:420px;box-shadow:var(--shadow)}
@@ -213,18 +212,26 @@ const cancelBtn=document.getElementById('cancelSuggest');
 const submitBtn=document.getElementById('submitSuggest');
 
 document.addEventListener('click',e=>{
-const btn=e.target;if(!(btn&&btn.matches('.suggest-main[data-agent]')))return;
-agentField.value=btn.getAttribute('data-agent');
-promptField.value='';justificationField.value='';
-modal.style.display='flex';
+  const btn=e.target;
+  if(!(btn&&btn.matches('.suggest-main[data-agent]')))return;
+  agentField.value=btn.getAttribute('data-agent');
+  promptField.value=''; justificationField.value='';
+  modal.style.display='flex';
 });
 
 cancelBtn.addEventListener('click',()=>{modal.style.display='none';});
 
 submitBtn.addEventListener('click',()=>{
-const agent=agentField.value.trim();
-const prompt=promptField.value.trim();
-const justification=justificationField.value.trim();
-if(!prompt){alert("Please enter the prompt idea.");return;}
-const message=`I would like to suggest adding the following Prompt: "${prompt}"
-
+  const agent=agentField.value.trim();
+  const prompt=promptField.value.trim();
+  const justification=justificationField.value.trim();
+  if(!prompt){alert("Please enter the prompt idea.");return;}
+  const message =
+    `I would like to suggest adding the following Prompt:\n\n"${prompt}"\n\nAgent: ${agent}\nJustification: ${justification || "N/A"}`;
+  const chatUrl =
+    `https://teams.microsoft.com/l/chat/0/0?users=josevazquez@microsoft.com&message=${encodeURIComponent(message)}`;
+  window.open(chatUrl,'_blank');
+  modal.style.display='none';
+});
+})();
+</
