Update HTML file

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ li:hover .send-btn{opacity:1}
 <div class="details-body">
 <p>Additional reference materials and quick video demos:</p>
 <div class="video-wrapper">
-  <iframe src="https://www.youtube.com/embed/gfiUI2YLsgc?rel=0&modestbranding=1&playsinline=1"
+  <iframe src="https://www.youtube-nocookie.com/embed/gfiUI2YLsgc?rel=0&modestbranding=1&playsinline=1"
     title="Prompt Orchestrator Demo"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
