Update HTML file

--- a/index.html
+++ b/index.html
@@ -140,13 +140,12 @@ li:hover .send-btn{opacity:1}
 <summary>E. Other Resources</summary>
 <div class="details-body">
 <p>Additional reference materials and quick video demos:</p>
-<div class="video-wrapper">
-  <iframe src="https://www.youtube-nocookie.com/embed/gfiUI2YLsgc?rel=0&modestbranding=1&playsinline=1"
-    title="Prompt Orchestrator Demo"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>
+<div style="text-align:center;">
+  <button class="video-btn" onclick="window.open('https://www.youtube.com/watch?v=gfiUI2YLsgc','_blank')">
+    <svg viewBox='0 0 24 24'><path d='M8 5v14l11-7z'/></svg> Watch on YouTube
+  </button>
+  <p style="color:var(--muted);font-size:14px;margin-top:8px;">Opens in a new tab for best playback inside Teams.</p>
 </div>
-<p class="video-caption">▶ Watch directly in Teams — interactive demo video.</p>
 </div>
 </details>
 
